Source/WebCore: When using TextureMapper, WebKit does not retain final value of opacity in animations, unless it is specified on the last key frame. https://bugs.webkit.org/show_bug.cgi?id=91322

Patch by Hanyee Kim <choco@company100.net> on 2012-07-23
Reviewed by Noam Rosenthal.

When -webkit-fill-mode is forwards, GraphicsLayerAnimation::apply does not apply
the property values defined in the last executing keyframe after the final iteration of animation.

This patch does not return right after the end of animation, but it keeps applying
the property values defined in the last executing keyframe.
Add normalizedAnimationValueForFillsForwards function that returns a normalized value of the
last executing keyframe.

Link to CSS Animations spec: http://www.w3.org/TR/css3-animations/#animation-fill-mode-property

Test: animations/fill-mode-forwards2.html

* platform/graphics/GraphicsLayerAnimation.cpp:
(WebCore::normalizedAnimationValueForFillsForwards):
(WebCore):
(WebCore::GraphicsLayerAnimation::apply):

LayoutTests: WebKit does not retain final value of opacity in animations, unless it is specified on the last key frame
https://bugs.webkit.org/show_bug.cgi?id=91322

Patch by Hanyee Kim <choco@company100.net> on 2012-07-23
Reviewed by Noam Rosenthal.

Added a test to check if the opacity has the right value after animation.

* animations/fill-mode-forwards2-expected.txt: Added.
* animations/fill-mode-forwards2.html: Added.

Canonical link: https://commits.webkit.org/109864@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@123414 268f45cc-cd09-0410-ab3c-d52691b4dbfc